Fix collapsed Videos in Image Sequences on small screens

--- a/less/video.less
+++ b/less/video.less
@@ -10,3 +10,13 @@
     top: 0;
   }
 }
+
+@media screen and ( max-width: 1000px ) {
+  .video {
+    &--fullsize {
+      height: auto;
+      position: static;
+      width: 100%;
+    }
+  }
+}
